2011-09-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group-1): Bump the "Retrieving"
	message level.

2011-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-read-from-minibuffer): Make abbrev expansion work.

2011-09-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-interactive-exit): Update defcustom spec.

2011-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus.el (gnus-nntp-server): Move to gnus-int.el to silence bytecomp.
	* gnus-int.el (gnus-nntp-server): Move from gnus.el.

2011-09-12  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-group.el (gnus-group-list-limit-map, gnus-group-list-flush-map)
	(gnus-group-list-plus-map): Allow limiting, flushing and plusing ticked
	articles.

2011-09-11  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-pop-to-buffer): Default to switch-to-buffer.
	(message-mail-other-window, message-mail-other-frame)
	(message-news-other-window, message-news-other-frame):
	Use switch-to-buffer-other-frame and switch-to-buffer-other-window
	instead of setting buffer display varibles.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-list-limit): Explain what the command does.

	* gnus-sum.el (gnus-fetch-headers): Bump message level.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-dup.el (gnus-dup-suppress-articles): Move "Suppressing
	duplicates" to a higher level.

	* gnus-util.el (gnus-verbose): Lower default to 6 to get rid of the
	most egregious messages.

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-mail-forward): Minuscule doc fix.

2011-09-10  Tetsuo Tsukamoto  <tt.tetsuo.tsukamoto@gmail.com>  (tiny change)

	* nnrss.el (nnrss-retrieve-groups): Decode the charset before looking
	up the file (bug#9351).

2011-09-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el: Redo the charset handling.  Let Gnus encode the names, as